--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,3 +1,3 @@
-* {margin:0,padding:0}
-#wrapper {width: 1000px; height: 650px;}
+* {margin:0px,padding:0px}
+#wrapper {width: 1300px; height: 650px;}
 .circle{position: absolute;border-radius:50%;}
