--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,3 +1,3 @@
 * {margin:0px,padding:0px}
-#wrapper {width: 1300px; height: 650px;}
+#wrapper {background-color: lightblue; width: 1300px; height: 600px;}
 .circle{position: absolute;border-radius:50%;}
