--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,4 +1,5 @@
 * {margin:0px ; padding:0px}
 #wrapper {background-color: lightblue; width: 1300px; height: 600px;}
 .circle{position: absolute;border-radius:50%;}
-.circle .circle {position:fixed;}
+.circle .circle {position:fixed; opacity: 1; transition: opacity 1s; }
+.opacityT {opacity:0 }
