--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -2,4 +2,12 @@
 #wrapper {background-color: lightblue; width: 1300px; height: 600px;}
 .circle{position: absolute;border-radius:50%;}
 .circle .circle {position:fixed; opacity: 1; transition: opacity 1s; }
-.circle .circle.opacityT {opacity:0 }
+.circle .circle.opacityT {
+    animation: mymove 1s;
+    animation-fill-mode: forwards;
+ }
+
+@keyframes mymove {
+    0%   {opacity: 1;}
+    100% {opacity: 0;}
+}
