--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,13 +1,15 @@
 * {margin:0px ; padding:0px}
 #wrapper {background-color: lightblue; width: 1300px; height: 600px;}
 .circle{position: absolute;border-radius:50%;}
-.circle {position:fixed; opacity: 1; transition: opacity 1s; }
-.circle.opacityT {
+.circle .circle {position:fixed; opacity: 1;}
+.circle .circle.opacityT {
     animation: mymove 1s;
     animation-fill-mode: forwards;
  }
 
 @keyframes mymove {
-    0%   {opacity: 1;}
-    100% {opacity: 0;}
+    0%   {opacity: 1;
+    visibility: visible;}
+    100% {opacity: 0;
+    visibility: hidden;}
 }
