--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -9,6 +9,7 @@ body {overflow: hidden;}
  }
 .DialogWindow {position:absolute; left:35%; top:35%; width:30%; height:30%; background-color: lightblue}
 #parent {padding: 33.3%;  background-color: yellow;}
+#create, #join {float:left;}
 @keyframes mymove {
     0%   {opacity: 1;
     visibility: visible;}
