--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -31,4 +31,4 @@ body {overflow: hidden;}
 .navigate {	height: 25%;  margin: auto;}
 .firstbutton {width: 110px;}
 .secondbutton{width: 168px;}
-#create, #join { margin: 7px 0px;}
+.navigate > * { margin: 7px 0px;}
