--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -34,6 +34,7 @@ body {padding:0px; margin:0px; overflow: hidden;}
 .inputdiv {width:119px}
 .submitdiv {width:119px}
 .navigate > * { margin: 7px 0px;}
+.create {margin: 7px 7px;}
 #canvas {border: solid 1px black; background-color: lightblue;}
 .ErroreWindow  {position: absolute;
     width: 170px;
