--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -33,7 +33,7 @@ body {padding:0px; margin:0px; overflow: hidden;}
 .inputdiv {width:119px}
 .submitdiv {width:119px}
 .navigate > * { margin: 7px 0px;}
-.create {margin: 7px 7px; height: 21px;}
+#create {min-width: 105px;  min-height: 21px;}
 #canvas {border: solid 1px black; background-color: lightblue;}
 .ErroreWindow  {position: absolute;
     width: 170px;
