--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -34,7 +34,7 @@ body {padding:0px; margin:0px; overflow: hidden;}
 .submitdiv {width:119px}
 .navigate > * { margin: 7px 0px;}
 #create {margin: 7px 7px;}
-#canvas {border: solid 1px black; background-color: lightblue;}
+#canvas {border: solid 1px black; background-color:  #A1954B;}
 .ErroreWindow  {position: absolute;
     width: 170px;
     left: 50%;
