--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -87,6 +87,6 @@ body {padding:0px; margin:0px; overflow: hidden;}
 }
 #stat div {
     float:left;
-    margin: 0 10px;
+    margin-right: 10px;
 }
 
